--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "vite": "^7.0.0"
+  },
+  "volta": {
+    "node": "24.11.1"
   }
 }
